name:                NaCl
version:             0.1
synopsis:            Haskell binding to the NaCl cryptography library
description:
  NaCl is a safe, high-speed, easy to use cryptography library. This
  package intends to provide a high-level Haskell binding to NaCl,
  allowing you to easily write code utilizing cryptographic primitives
  for public-key and private-key encryption, authentication, and
  signatures.
  .
  The NaCl project (<http://nacl.cace-project.eu/>) was initiated
  by CACE (Computer Aided Cryptography Engineering,) and is currently
  lead by Dan J. Bernstein and Tanja Lange. It's designed to be
  considerably faster and easier to use (example: simple APIs, good
  selection of default primitives) than alternatives like OpenSSL,
  while providing more security. As an example, it systematically
  avoids all conditional branches in order to make sure secrets cannot
  leak out via timing attacks. Similarly, there are no data-dependent
  array index accesses. It also does not allocate memory dynamically
  at all (via @malloc@) so the primitives only require small amounts
  of stack space. Cryptographic implementations are tuned on a
  CPU-specific basis.
  .
  NaCl has an odd build structure. In order to install the bindings
  properly, please follow the 'Installation' section located in the
  @README.md@, which you can find online here: TODO FIXME
  .
  Point of note: NaCl is, like much DJB software, released in the
  public domain (which isn't recognized by all jurisdictions.) These
  bindings however, are BSD3 licensed - and as of current,
  redistribute a small amount of the NaCl source (the @randombytes@
  function based on @/dev/urandom@.)

homepage:            http://github.com/thoughtpolice/hs-NaCl
bug-reports:         http://github.com/thoughtpolice/hs-NaCl/issues
license:             BSD3
license-file:        LICENSE
author:              Austin Seipp <as@hacks.yi.org>
maintainer:          Austin Seipp <as@hacks.yi.org>
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

extra-Source-Files:
  README.md
  cbits/devurandom.c
  cbits/devurandom.h
  cbits/glue.cpp
  cbits/glue.h
  tests/Properties.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-NaCl.git

library
  exposed-modules:
    Crypto.NaCl.Public.Encrypt
    Crypto.NaCl.Public.ScalarMult
    Crypto.NaCl.Public.Signature
    Crypto.NaCl.Secret.Authentication
    Crypto.NaCl.Secret.Encrypt
    Crypto.NaCl.Hash
    Crypto.NaCl.Random
  build-depends:
    base       >= 4,
    bytestring >= 0.9

  c-sources:        
    cbits/glue.cpp
    cbits/devurandom.c
  include-dirs:     cbits
  extra-libraries:  nacl stdc++

  cc-options:       -Wall
  ghc-options:      -Wall -O2

  default-language: Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    QuickCheck     == 2.4.*,
    test-framework == 0.4.*,
    test-framework-quickcheck2 == 0.2.*,
    NaCl

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
  default-language: Haskell2010
