name:                NaCl
version:             0.0
synopsis:            Haskell binding to the NaCl cryptography library
description:
  NaCl (pronounced \"salt\") is a safe, high-speed, easy to use
  cryptography library. This package intends to provide a high-level
  Haskell binding to NaCl, allowing you to easily write code utilizing
  cryptographic primitives for public-key and private-key encryption,
  authentication, and signatures.
  .
  The NaCl project (<http://nacl.cace-project.eu/>) was initiated
  by CACE (Computer Aided Cryptography Engineering,) and is currently
  lead by Dan J. Bernstein and Tanja Lange. It's designed to be
  considerably faster and easier to use (example: simple APIs, good
  selection of default primitives) than alternatives like OpenSSL.
  .
  Please check out the NaCl home page for more information about the
  underlying features: <http://nacl.cace-project.eu/features.html>
  .
  NaCl itself has an odd build structure. There's an included
  @bootstrap.sh@ script in order to make installation easy. Please
  follow the 'Install' section on the home page:
  .
  <http://thoughtpolice.github.com/hs-nacl>
  .
  The homepage also contains documentation, benchmarks, code coverage
  results, and examples.
  .
  Point of note: NaCl is, like much DJB software, released in the
  public domain (which isn't recognized by all jurisdictions.) These
  bindings however, are BSD3 licensed - and as of current,
  redistribute a small amount of the NaCl source (the @randombytes@
  function based on @\/dev\/urandom@.)

homepage:            http://thoughtpolice.github.com/hs-nacl
bug-reports:         http://github.com/thoughtpolice/hs-nacl/issues
license:             BSD3
license-file:        LICENSE
author:              Austin Seipp <as@hacks.yi.org>
maintainer:          Austin Seipp <as@hacks.yi.org>
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.0.4, GHC==7.2.1

extra-source-files:
  bootstrap.sh
  cbits/*.c
  README.md
  tests/*.hs
  bench/Bench.hs bench/makefile bench/mkhtml.hs
  examples/*.hs

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-nacl.git

flag hpc
  default: False

library
  exposed-modules:
    Crypto.NaCl.Auth
    Crypto.NaCl.Encrypt.PublicKey
    Crypto.NaCl.Encrypt.SecretKey
    Crypto.NaCl.Encrypt.Stream
    Crypto.NaCl.Hash
    Crypto.NaCl.Nonce
    Crypto.NaCl.Random
    Crypto.NaCl.Sign
  other-modules:
    Crypto.NaCl.Auth.Auth
    Crypto.NaCl.Auth.OneTimeAuth
    Crypto.NaCl.Encrypt.Stream.Internal
    Crypto.NaCl.Encrypt.Stream.XSalsa20
    Crypto.NaCl.Encrypt.Stream.Salsa20
    Crypto.NaCl.Encrypt.Stream.Salsa2012
    Crypto.NaCl.Encrypt.Stream.Salsa208
    Crypto.NaCl.Encrypt.Stream.AES128CTR
  build-depends:
    base       >= 4,
    bytestring >= 0.9
  c-sources:        
    cbits/glue.c
    cbits/glue_stream.c
    cbits/devurandom.c
  include-dirs:     cbits
  extra-libraries:  nacl

  cc-options:       -Wall
  ghc-options:      -Wall -O2 -funbox-strict-fields
  if flag(hpc)
    ghc-options:    -fhpc

  default-language: Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    QuickCheck     == 2.4.*,
    HUnit          == 1.2.*,
    test-framework == 0.4.*,
    test-framework-quickcheck2 == 0.2.*,
    test-framework-hunit == 0.2.*,
    NaCl

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010
