name:                salt
version:             0.0
synopsis:            Cryptographic networking for Haskell
description:
  NaCl (pronounced \"salt\") is a safe, high-speed, easy to use
  cryptography library. This package intends to provide a high-level
  binding to NaCl, and more generally, it intends to eventually
  provide a complete library for secure cryptographic networking.
  .
  The NaCl project (<http://nacl.cace-project.eu/>) was initiated
  by CACE (Computer Aided Cryptography Engineering,) and is currently
  lead by Dan J. Bernstein and Tanja Lange. It's designed to be
  considerably faster and easier to use (example: simple APIs, good
  selection of default primitives) than alternatives like OpenSSL.
  .
  Please check out their home page for more information about the
  underlying features: <http://nacl.cace-project.eu/features.html>
  .
  NaCl itself has an odd build structure. There's an included
  @bootstrap.sh@ script in order to make installation easy. Please
  follow the 'Install' section on the home page of this package:
  .
  <http://thoughtpolice.github.com/salt>
  .
  Hopefully sometime in the future this won't be necessary.
  .
  The homepage also contains documentation, benchmarks, code coverage
  results, and examples.
homepage:            http://thoughtpolice.github.com/salt
bug-reports:         http://github.com/thoughtpolice/salt/issues
license:             MIT
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2011
author:              Austin Seipp <as@hacks.yi.org>
maintainer:          Austin Seipp <as@hacks.yi.org>
category:            Cryptography, Networking
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.0.4, GHC==7.2.1

extra-source-files:
  AUTHORS.txt
  bench/Bench.hs bench/makefile bench/mkhtml.hs
  bootstrap.sh
  cbits/*.c
  examples/*.hs
  README.md
  tests/*.hs
  TODO

source-repository head
  type: git
  location: https://github.com/thoughtpolice/salt.git

flag hpc
  default: False

library
  exposed-modules:
    Crypto.NaCl.Auth
    Crypto.NaCl.Auth.Auth
    Crypto.NaCl.Auth.OneTimeAuth
    Crypto.NaCl.Encrypt.PublicKey
    Crypto.NaCl.Encrypt.SecretKey
    Crypto.NaCl.Encrypt.Stream
    Crypto.NaCl.Hash
    Crypto.NaCl.Key
    Crypto.NaCl.Nonce
    Crypto.NaCl.Nonce.Internal
    Crypto.NaCl.Random
    Crypto.NaCl.Sign

  build-depends:
    base       >= 4,
    bytestring >= 0.9

  hs-source-dirs: src
  c-sources:        
    src/cbits/glue.c
    src/cbits/devurandom.c
  include-dirs:     src/cbits
  extra-libraries:  nacl

  cc-options:       -Wall
  ghc-options:      -Wall -O2 -funbox-strict-fields
  if flag(hpc)
    ghc-options:    -fhpc

  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    QuickCheck     == 2.4.*,
    HUnit          == 1.2.*,
    test-framework == 0.4.*,
    test-framework-quickcheck2 == 0.2.*,
    test-framework-hunit == 0.2.*,
    salt

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010
